fix: scrollbar width

--- a/css/butterfly.css
+++ b/css/butterfly.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
 /* 滚动条 */
 
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 13px;
     height: 10px;
 }
 
